# project-assignment-lottery-system

./: Cargo.toml  readme.md
benches/: benchmarks.rs
src/: lib.rs  main.rs
tests/: tests.rs
